Added UserDatabaseSettings, service and controller for user collection and changed appsettings file

--- a/ComeX.UserDatabaseAPI/appsettings.json
+++ b/ComeX.UserDatabaseAPI/appsettings.json
@@ -1,6 +1,9 @@
 {
-  "ConnectionStrings": {
-    "UserAPICon": ""
+  "UserDatabaseSettings": {
+    "UsersCollectionName": "users",
+    "TokensCollectionName": "tokens",
+    "ConnectionString": "",
+    "DatabaseName":  "UserDB"
   },
   "Logging": {
     "LogLevel": {
