--- a/ComeX.UserDatabaseAPI/appsettings.json
+++ b/ComeX.UserDatabaseAPI/appsettings.json
@@ -2,8 +2,8 @@
   "UserDatabaseSettings": {
     "UsersCollectionName": "users",
     "TokensCollectionName": "tokens",
-    "ConnectionString": "",
-    "DatabaseName":  "UserDB"
+    "ConnectionString": "mongodb+srv://admin:N4odcn0zRPFxcyMi@userdb.cyad1.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+    "DatabaseName": "UserDB"
   },
   "Logging": {
     "LogLevel": {
