Displaying messages and surveys - in progress

--- a/ComeX.WPF/ComeX.WPF.csproj
+++ b/ComeX.WPF/ComeX.WPF.csproj
@@ -7,19 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="avatar.jpg" />
-    <None Remove="placeholder.jpg" />
-    <None Remove="settings.png" />
-    <None Remove="UserControls\answerPlaceholder.jpg" />
-    <None Remove="Windows\questionPlaceholder.jpg" />
+    <Resource Include="Resources\Images\Placeholders\messagePlaceholder.jpg" />
+    <Resource Include="Resources\Images\Placeholders\answerPlaceholder.jpg" />
+    <Resource Include="Resources\Images\Placeholders\questionPlaceholder.jpg" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="avatar.jpg" />
-    <Resource Include="Images\Placeholders\messagePlaceholder.jpg" />
-    <Resource Include="settings.png" />
-    <Resource Include="UserControls\answerPlaceholder.jpg" />
-    <Resource Include="Windows\questionPlaceholder.jpg" />
+    <Folder Include="Resources\" />
   </ItemGroup>
 
 </Project>
