Added TokenMessage and NewtonsoftJson package to CommunicationModels

--- a/ComeX.UserDatabaseAPI/ComeX.UserDatabaseAPI.csproj
+++ b/ComeX.UserDatabaseAPI/ComeX.UserDatabaseAPI.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ComeX.CommunicationModels\ComeX.CommunicationModels.csproj" />
+  </ItemGroup>
+
 </Project>
