--- a/ComeX.Lib.Auth/ComeX.Lib.Auth.csproj
+++ b/ComeX.Lib.Auth/ComeX.Lib.Auth.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0" />
+    <PackageReference Include="RestSharp" Version="106.13.0" />
+  </ItemGroup>
+
 </Project>
