--- a/ComeX.Lib.Auth/ComeX.Lib.Auth.csproj
+++ b/ComeX.Lib.Auth/ComeX.Lib.Auth.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="RestSharp" Version="106.13.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ComeX.Lib.Common\ComeX.Lib.Common.csproj" />
+  </ItemGroup>
+
 </Project>
