--- a/ComeX.WPF/ComeX.WPF.csproj
+++ b/ComeX.WPF/ComeX.WPF.csproj
@@ -17,7 +17,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ComeX.Lib.Common\ComeX.Lib.Common.csproj" />
   </ItemGroup>
 
 </Project>
