--- a/ComeX.WPF/ComeX.WPF.csproj
+++ b/ComeX.WPF/ComeX.WPF.csproj
@@ -10,6 +10,8 @@
     <Resource Include="Resources\Images\Placeholders\messagePlaceholder.jpg" />
     <Resource Include="Resources\Images\Placeholders\answerPlaceholder.jpg" />
     <Resource Include="Resources\Images\Placeholders\questionPlaceholder.jpg" />
+    <Resource Include="Resources\Images\Placeholders\oldPasswordPlaceholder.jpg" />
+    <Resource Include="Resources\Images\Placeholders\newPasswordPlaceholder.jpg" />
     <Resource Include="Resources\Fonts\Nunito-Medium.ttf" />
     <Resource Include="ExampleImages\put.jpg" />
     <Resource Include="Resources\Images\logo1.png" />
