--- a/ComeX.UserDatabaseAPI/appsettings.json
+++ b/ComeX.UserDatabaseAPI/appsettings.json
@@ -2,6 +2,8 @@
   "UserDatabaseSettings": {
     "UsersCollectionName": "users",
     "TokensCollectionName": "tokens",
+    "ServersCollectionName": "servers",
+    "UsersToServersCollectionName": "users_to_servers",
     "ConnectionString": "mongodb+srv://admin:N4odcn0zRPFxcyMi@userdb.cyad1.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
     "DatabaseName": "UserDB"
   },
