Delete account, register fix

--- a/ComeX.WPF/ComeX.WPF.csproj
+++ b/ComeX.WPF/ComeX.WPF.csproj
@@ -19,6 +19,7 @@
     <Resource Include="Resources\Images\Placeholders\questionPlaceholder.jpg" />
     <Resource Include="Resources\Images\Placeholders\oldPasswordPlaceholder.jpg" />
     <Resource Include="Resources\Images\Placeholders\newPasswordPlaceholder.jpg" />
+    <Resource Include="Resources\Images\Placeholders\passwordPlaceholder.jpg" />
     <Resource Include="Resources\Fonts\Nunito-Medium.ttf" />
     <Resource Include="Resources\Images\logo1.png" />
     <Resource Include="Resources\Images\logo2.png" />
