--- a/ComeX.WPF/ComeX.WPF.csproj
+++ b/ComeX.WPF/ComeX.WPF.csproj
@@ -23,6 +23,16 @@
     <Resource Include="Resources\Fonts\Nunito-Medium.ttf" />
     <Resource Include="Resources\Images\logo1.png" />
     <Resource Include="Resources\Images\logo2.png" />
+    <Resource Include="Resources\Images\Emojis\1.png" />
+    <Resource Include="Resources\Images\Emojis\2.png" />
+    <Resource Include="Resources\Images\Emojis\3.png" />
+    <Resource Include="Resources\Images\Emojis\4.png" />
+    <Resource Include="Resources\Images\Emojis\5.png" />
+    <Resource Include="Resources\Images\Emojis\6.png" />
+    <Resource Include="Resources\Images\Emojis\7.png" />
+    <Resource Include="Resources\Images\Emojis\8.png" />
+    <Resource Include="Resources\Images\Emojis\9.png" />
+    <Resource Include="Resources\Images\Emojis\10.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,6 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Emoji.Wpf" Version="0.3.3" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
