--- a/ComeX.Server.Tests/ComeX.Server.Tests.csproj
+++ b/ComeX.Server.Tests/ComeX.Server.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Connections.Client" Version="3.1.22" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.22" />
