--- a/ComeX.WPF/ComeX.WPF.csproj
+++ b/ComeX.WPF/ComeX.WPF.csproj
@@ -23,6 +23,7 @@
     <Resource Include="Resources\Fonts\Nunito-Medium.ttf" />
     <Resource Include="Resources\Images\logo1.png" />
     <Resource Include="Resources\Images\logo2.png" />
+    <Resource Include="Resources\Images\logo3.png" />
     <Resource Include="Resources\Images\Emojis\1.png" />
     <Resource Include="Resources\Images\Emojis\2.png" />
     <Resource Include="Resources\Images\Emojis\3.png" />
@@ -30,9 +31,6 @@
     <Resource Include="Resources\Images\Emojis\5.png" />
     <Resource Include="Resources\Images\Emojis\6.png" />
     <Resource Include="Resources\Images\Emojis\7.png" />
-    <Resource Include="Resources\Images\Emojis\8.png" />
-    <Resource Include="Resources\Images\Emojis\9.png" />
-    <Resource Include="Resources\Images\Emojis\10.png" />
   </ItemGroup>
 
   <ItemGroup>
