Reading env connstr and setup command

--- a/ComeX.Server/Properties/launchSettings.json
+++ b/ComeX.Server/Properties/launchSettings.json
@@ -28,6 +28,9 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "CONNECTION_STRING": "Server = comx.molly.ovh; Port = 25432; Database = postgres; User Id = banan; Password = s9n5#@Jo;"
+      },
       "publishAllPorts": true,
       "useSSL": true
     }
