--- a/ComeX.Lib.Common/ComeX.Lib.Common.csproj
+++ b/ComeX.Lib.Common/ComeX.Lib.Common.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="SqlKata.Execution" Version="2.3.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="DB\DBScript.sql">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
