--- a/Comex.Server.AdminCli/Comex.Server.AdminCli.csproj
+++ b/Comex.Server.AdminCli/Comex.Server.AdminCli.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RestSharp" Version="107.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ComeX.Lib.Common\ComeX.Lib.Common.csproj" />
   </ItemGroup>
 
